# calmplots

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  gallery.yml  linkcheck.yml  release.yml
docs/: compatibility.md  do-dont.md  quickstart.md
docs/source/: api.rst  colorblindness.rst  compatibility.rst  conf.py  do_dont.rst  gallery.rst  index.rst  quickstart.rst
examples/gallery/: _plotly_export.py  altair_gallery.py  before_after_matplotlib.py  generate_matrix.py  matplotlib_seaborn_gallery.py  palette_gallery.py  plotly_gallery.py  plotnine_gallery.py
examples/gallery/matrix/: README.md
src/calmplots/: __init__.py  accessibility.py  altair_theme.py  matplotlib_theme.py  palettes.py  plotly_theme.py  plotnine_theme.py  presets.py  seaborn_theme.py  tokens.py  utils.py
src/calmplots/styles/: calmplots.mplstyle  calmplots_dark.mplstyle
tests/: test_accessibility.py  test_altair.py  test_bluey_fidelity.py  test_contrast.py  test_docs_assets.py  test_matplotlib.py  test_palettes.py  test_plotly.py  test_plotnine.py  test_public_api.py  test_quickstart_docs.py  test_render_exports.py  test_seaborn_matplotlib_interop.py
