[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calmplots"
version = "0.1.0"
description = "Cohesive visualization themes for matplotlib, seaborn, plotnine, plotly, and altair."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
  {name = "Kunal K. Sarkhel", email = "ksarkhel@gmu.edu"}
]
keywords = ["visualization", "matplotlib", "seaborn", "plotnine", "plotly", "altair", "theme", "palette"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = []

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.6"]
seaborn = ["seaborn>=0.12", "matplotlib>=3.6"]
plotnine = ["plotnine>=0.12"]
plotly = ["plotly>=5.15"]
altair = ["altair>=5.0"]
all = [
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "plotnine>=0.12",
  "plotly>=5.15",
  "altair>=5.0"
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
  "pyrefly>=0.54.0",
  "build>=1.2",
  "sphinx>=7.4",
  "furo>=2024.8.6",
  "numpy>=1.24",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "plotnine>=0.12",
  "plotly>=5.15",
  "altair>=5.0"
]

[project.urls]
Homepage = "https://techwizrd.github.io/calmplots/"
Repository = "https://github.com/techwizrd/calmplots/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
calmplots = ["styles/*.mplstyle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "unit: fast unit tests",
  "integration: tests requiring optional plotting backends"
]

[tool.pyrefly]
project-includes = [
  "src/**/*.py",
  "tests/**/*.py",
  "examples/**/*.py"
]
project-excludes = [
  "docs/**",
  "**/.venv/**",
  "**/__pycache__/**"
]
ignore-missing-imports = [
  "altair.*",
  "cycler.*",
  "matplotlib.*",
  "numpy.*",
  "pandas.*",
  "plotly.*",
  "plotnine.*",
  "pytest.*",
  "seaborn.*"
]
